test/force-app/main/default/objects/Assumption__c/Assumption__c.object-meta.xml
<CustomObject>
    <label>Assumption DELETE</label>
    <nameField>
        <label>Assumptions Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Assumptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>