test/force-app/main/default/objects/Assumption__c/fields/Depreciation_Allocation__c.field-meta.xml
<CustomField>
    <fullName>Depreciation_Allocation__c</fullName>
    <label>Depreciation Allocation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>