test/force-app/main/default/objects/Assumption__c/fields/Escalator__c.field-meta.xml
<CustomField>
    <fullName>Escalator__c</fullName>
    <label>Escalator</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>