test/force-app/main/default/objects/Assumption__c/fields/ITC_Eligibility__c.field-meta.xml
<CustomField>
    <fullName>ITC_Eligibility__c</fullName>
    <label>ITC Eligibility</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>