test/force-app/main/default/objects/Assumption__c/fields/OandM_Escalator__c.field-meta.xml
<CustomField>
    <fullName>OandM_Escalator__c</fullName>
    <label>OandM Escalator</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>