test/force-app/main/default/objects/Assumption__c/fields/Term_Months__c.field-meta.xml
<CustomField>
    <fullName>Term_Months__c</fullName>
    <formula>Term_Years__c * 12</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Term Months</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>